--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -14,6 +14,7 @@
        <th>終了日</th>
        <th>終日</th>
        <th>更新日</th>
+       <th>参照</th>
      </tr>
    </thead>
  
@@ -26,6 +27,9 @@
          <td><%= plan.finish_day.strftime("%Y/%m/%d") %></td>
          <td><%= plan.all_day ? '⚪︎' : '×' %></td>
          <td><%= plan.updated_at.to_s(:datetime_jp) %></td>
+         <td>
+         <%= link_to "参照", plan %>
+         </td>
        </tr>
      <% end %>
    </tbody>
