#{ページ全体のデザインを整えたのと、新規追加機能のバリデーションと削除モーダル表示を追加}

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RailsAppSchedule</title>
+    <title>スケジュール管理アプリ</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <%= stylesheet_link_tag 'plans' %>
   </head>
 
   <body>
-    <%= yield %>
+    <div class="site-title">スケジュール管理アプリ</div>
+    <div class="wrapper">
+      <%= yield %>
+    </div>
+    <% if flash[:notice] %>
+    <p class="notice"><%= flash[:notice] %></p>
+    <% end %>
   </body>
 </html>
