--- a/app/views/plans/edit.html.erb
+++ b/app/views/plans/edit.html.erb
@@ -1,33 +1,41 @@
+<div class="wrapper-short">
 <h3>予定編集</h3>
 
 <%= form_with model: @plan do |f| %>
-  <table>
-    <tr>
-      <th><%= f.label :title ,"タイトル" %></th>
-      <td><%= f.text_field :title %></td>
-    </tr>
-    <tr>
-      <th><%= f.label :start_day ,"開始日" %></th>
-      <td><%= f.date_field :start_day %></td>
-    </tr>
-    <tr>
-    <th><%= f.label :finish_day ,"終了日" %></th>
-    <td><%= f.date_field:finish_day %></td>
-    </tr>
-    <tr>
-      <th><%= f.label :all_day ,"終日" %></th>
-      <td><%= f.check_box:all_day %></td>
-    </tr>
-    <tr>
-      <th><%= f.label :memo ,"スケジュールメモ" %></th>
-      <td><%= f.text_area :memo %></td>
-    </tr>
-  </table>
+  <div class="plan-datas">
+    <div>
+      <%= f.label :title ,"タイトル" %>
+      <%= f.text_field :title %>
+    </div>
 
-  <div>
-    <ul>
-      <li><%= f.submit "編集を完了する" %></li>
-      <li><%= link_to "予定一覧に戻る", :plans %></li>
-    </ul>
+    <div class="select-days">
+      <div class="start_day">
+        <%= f.label :start_day ,"開始日" %>
+        <%= f.date_field :start_day %>
+      </div>
+  
+      <div class="finish_day">
+        <%= f.label :finish_day ,"終了日" %>
+        <%= f.date_field :finish_day %>
+      </div>
+    </div>
+
+    <div class="all_day">
+      <%= f.check_box :all_day %>
+      <%= f.label :all_day ,"終日の場合はチェックを入れます" %>
+    </div>
+
+    <div>
+      <%= f.label :memo ,"スケジュールメモ" %>
+      <%= f.text_area :memo, :placeholder => "メモを入力してください" %>
+    </div>
+
+    <div class="btns">
+      <%= link_to "キャンセル", :plans %>
+      <%= f.submit "保存"%>
+    </div>
   </div>
+
+
 <% end %>
+</div>
