--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -1,26 +1,24 @@
-<h3>予定詳細</h3>
-<div>
-  <ul>
-    <li><%= link_to "予定一覧に戻る", :plans %></li>
-  </ul>
-</div>
+<div class="wrapper-show">
+  <h3>予定詳細</h3>
+  <div class="show-btns">
+    <div class=""><%= link_to "< 予定一覧に戻る", :plans %></div>
+    <div><%= link_to "編集", edit_plan_path(@plan) %></div>
+  </div>
 
-<table>
-  <tr>
-    <th>名前</th>
-    <td><%= @plan.title %></td>
-  </tr>
-  <tr>
-    <th>開始日</th>
-    <td><%= @plan.start_day %></td>
-  </tr>
-  <tr>
-    <th>終了日</th>
-    <td><%= @plan.finish_day %></td>
-  </tr>
-  <tr>
-    <th>スケジュールメモ</th>
-    <td><%= @plan.memo %></td>
-  </tr>
-</table>
+  <h4><%= @plan.title %></h4>
+  <table class="show-datas">
+    <tr>
+      <th>開始日</th>
+      <td><%= @plan.start_day %></td>
+    </tr>
+    <tr>
+      <th>終了日</th>
+      <td><%= @plan.finish_day %></td>
+    </tr>
+    <tr>
+      <th>スケジュールメモ</th>
+      <td><%= @plan.memo %></td>
+    </tr>
+  </table>
+</div>
 
