--- a/app/assets/stylesheets/plans.scss
+++ b/app/assets/stylesheets/plans.scss
@@ -1,3 +1,196 @@
 // Place all the styles related to the plans controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+body{
+    background-color: rgb(246, 246, 246);
+}
+.wrapper{
+    width: 70%;
+    padding: 0;
+    margin: 0 auto;
+}
+.site-title{
+    width: 100%;
+    color: #fff;
+    font-weight: bold;
+    line-height: 50px;
+    text-align: center;
+    background-color: #1c1d3b;
+    height: 50px;
+    margin-bottom: 24px;
+}
+.notice{
+    background-color: #1c1d3b;
+    color: #fff;
+    box-shadow: 0px 3px 10px rgba(0,0,0,0.5);
+    text-align: center;
+    border-radius: 10px;
+    padding: 20px;
+    width:fit-content;
+    margin-top: 25px;
+    position: fixed;
+    top: 85%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.wrapper-pagetitle-btn{
+    display: flex;
+    justify-content: space-between;
+}
+.wrapper-pagetitle-btn div:nth-child(1){
+    text-align: right;
+    margin: 0;
+}
+.btn-plan-new{
+    width: 120px;
+    background-color: #2962ff;
+    text-align: center;
+    line-height: 50px;
+    border-radius: 10px;
+}
+.btn-plan-new:hover{
+    background-color: #0230b1;
+    transition: 0.5s;
+}
+.btn-plan-new a{
+    color: #fff;
+    text-decoration: none;
+}
+.plan-list{
+    width: 95%;
+    padding: 100px;
+    margin: 0 auto;
+    background-color: #fff;
+    border: 1px solid #dcdcdc;
+    box-shadow: 0 0 1px rgba(0,0,0,.02), 0 1px 3px rgba(50,50,93,.15);
+}
+.plan-list th,.plan-list td{
+    border-bottom: 1px solid #dcdcdc;
+    padding: 10px 15px;
+    text-align: center;
+}
+
+.wrapper-sum-date{
+    display: flex;
+    justify-content: space-between;
+    background-color: #fff;
+    margin-top: 24px;
+    border-radius: 4px;
+    box-shadow: 0 0 1px rgba(0,0,0,.02), 0 1px 3px rgba(50,50,93,.15);
+    display: flex;
+    justify-content: space-between;
+    padding: 24px;
+}
+.wrapper-sum-date div:nth-child(2){
+    color:  #bcbcbc;
+}
+
+.wrapper-short{
+    width: 70%;
+    margin: 0 auto;
+}
+h3{
+    width: 100%;
+    font-size: 20px;
+}
+.plan-datas{
+    background-color: #fff;
+    padding: 15px;
+    border: 1px solid #dcdcdc;
+    box-shadow: 0 0 1px rgba(0,0,0,.02), 0 1px 3px rgba(50,50,93,.15);
+}
+.plan-datas div{
+    margin: 5px;
+}
+.plan-datas input{
+    width: 100%;
+    border: 1px solid #dcdcdc;
+    border-radius: 5px;
+    padding: 5px;
+}
+.select-days{
+    display: flex;
+    justify-content: space-between;
+}
+.start_day{
+    width: 49%;
+    padding: 0;
+}
+.finish_day{
+    width: 49%;
+    padding: 0;
+}
+.all_day{
+    display: flex;
+    justify-content: start;
+}
+.all_day input{
+    width: 5%;
+    border-color: none;
+}
+.all_day label{
+    margin-left: 10px;
+}
+textarea{
+    width: 100%;
+    height: 150px;
+    border: 1px solid #dcdcdc;
+    border-radius: 5px;
+}
+.btns{
+    display: flex;
+    justify-content: end;
+}
+.btns input{
+    width: 100px;
+    height: 50px;
+    background-color: #2962ff;
+    color: #fff;
+}
+.btns a{
+    width: 100px;
+    text-align: center;
+    text-decoration: none;
+    line-height: 50px;
+    margin-right: 10px;
+    border-radius: 10px;
+    border: 1px solid #bcbcbc;
+    color: #1c1d3b;
+    background-color: #dcdcdc;
+}
+.btns input:hover{
+    background-color: #0230b1;
+    transition: 0.5s;
+}
+.wrapper-show{
+    width: 60%;
+    margin: 0 auto;
+}
+.show-btns{
+    display: flex;
+    justify-content: space-between;
+}
+.show-btns div a{
+    text-decoration: none;
+    display: block;
+    width: 100%;
+    padding: 10px 25px;
+}
+.show-btns div:nth-child(2){
+    border: 1px solid #2962ff;
+    border-radius: 10px;
+}
+h4{
+    margin-top: 20px;
+}
+.show-datas{
+    width: 100%;
+    background-color: #fff;
+    border: 1px solid #dcdcdc;
+    box-shadow: 0 0 1px rgba(0,0,0,.02), 0 1px 3px rgba(50,50,93,.15);
+}
+.show-datas th,.show-datas td{
+    border-bottom: 1px solid #dcdcdc;
+    padding: 10px;
+}
